<resources>

    <string name="app_name">自贸区云账户</string>
    <string name="slogan">  </string>


    <string name="reload">重新加载</string>
    <string name="error_network_load_failed">网络错误，请重新加载</string>

    <string name="loading">正在加载&#8230;</string>
    <string name="hint_data_no_found">暂无数据</string>
    <string name="no_more_footer">我是有底线的</string>


    <string name="share_cancle">分享取消</string>
    <string name="share_fail">分享失败</string>
    <string name="share_success">分享成功</string>
    <string name="wechat_noting">抱歉,您尚未安装微信</string>

    <!--  android/开发环境/资源类型/是否为加密文件/时间戳.jpg-->

    <!-- 普通图片，正式 -->
    <string name="upload_image_path_format">prod/android/account/general%1$s.jpg</string>

    <!-- 加密图片，正式 -->
    <string name="upload_image_encryption_path_format">prod/android/order/encryption%1$s.jpg</string>


    <!-- 普通图片，开发 -->
    <string name="upload_image_path_dev_format">dev/android/account/general%1$s.jpg</string>

    <!-- 加密图片，开发 -->
    <string name="upload_image_encryption_path_dev_format">dev/android/order/encryption%1$s.jpg</string>

    <!-- 上传成功后的最终URL val finalUrl = "https://$imageBucketName.$endpoint/$imageObjectKey" -->
    <string name="final_url_format">https://%1$s.%2$s/%3$s</string>

    <string name="home">首页</string>
    <string name="product">产品</string>
    <string name="tab_news">资讯</string>
    <string name="my">我的</string>
    <string name="empty_text">暂无数据</string>
    <string name="sales_format">月销量：%1$s</string>
    <string name="money_symbol">&#165;</string>
    <string name="money_symbol_with_blank">&#165;&#160;</string>
    <string name="money_symbol_format">&#165;&#160;%1$s</string>
    <string name="money_symbol_negative_format">-&#165;%1$s</string>
    <string name="un_login_name">登录/注册</string>
    <string name="about_us">关于我们</string>
    <string name="privacy_statement">隐私政策</string>
    <string name="copyright_protection">版权保护</string>
    <string name="contact_us">版权保护</string>

    <string name="register_protocol">我已阅读并接受《自贸区云账户服务协议》</string>
    <string name="register_protocol_title">我已阅读并接受</string>
    <string name="register_protocol_value">《自贸区云账户服务协议》</string>
    <string name="register_protocol_value2">《隐私政策》</string>
    <string name="register_protocol_product_detail_value">服务协议</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="captcha_target_format">验证码已经发送到您的手机 \n%1$s</string>
    <string name="count_down_format" formatted="false">%1$d秒</string>
    <string name="count_down_market_format" formatted="false">%1$d秒&#160;后自动跳转至操作页面</string>
    <string name="get_again">重新获取</string>

    <string name="hint">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="login_out_hint">是否退出登录?</string>

    <!-- 订单相关 -->
    <string name="order_list_title">我的订单</string>
    <string name="order_id_format">订单号:%1$s</string>
    <string name="expiration_date_format">订单有效期:%1$s</string>
    <string name="go_payment">去付款</string>
    <string name="view">查看</string>
    <string name="business_progress_title">订单详情</string>

    <string name="taxpayer_id">纳税人识别号\n(社会统一代码)</string>
    <string name="legal_person_name">法人姓名</string>
    <string name="legal_person_id_number">法人身份证号</string>
    <string name="legal_person_id_number_hint">请输入法人身份证号</string>
    <string name="legal_person_name_hint">请输入法人姓名</string>
    <string name="legal_person_phone_hint">请输入法人电话</string>

    <string name="identity_number">身份证号</string>
    <string name="identity_number_hint">请输入身份证号</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="bank_card_number_hint">请输入银行卡号</string>

    <string name="bank_phone">银行预留手机号</string>
    <string name="bank_phone_hint">请输入银行预留手机号</string>
    <string name="zero_company_name">首选公司名称</string>
    <string name="first_company_name">备选公司名称1</string>
    <string name="second_company_name">备选公司名称2</string>
    <string name="no_less_than_3_word">请输入不少于三个字</string>
    <string name="invest_year_num">出资年限</string>
    <string name="invest_year_num_hint">请输入出资年限</string>
    <string name="amount_of_funds">资金数额</string>
    <string name="address">地址</string>
    <string name="id_address">身份证地址</string>
    <string name="id_expiration_date">身份证有效期</string>
    <string name="id_address_hint">请输入身份证地址</string>
    <string name="contact_number">联系电话</string>
    <string name="contact_number_hint">请输入联系电话</string>
    <string name="share_ratio">股份占比</string>
    <string name="share_ratio_hint">请输入股份占比</string>
    <string name="share_ratio_hint_2">请输入股份占比（选填）</string>
    <string name="share_ratio_value_format">股份占比%1$s</string>
    <string name="registered_capital">注册资金(万元)</string>
    <string name="account_nature">账户性质</string>
    <string name="legal_person_info">法人信息</string>
    <string name="financial_manager_info">财务负责人信息</string>
    <string name="supervisor_info">监事信息</string>
    <string name="shareholder_info">股东信息(法人也需要填写)</string>
    <string name="shareholder_info2">股东信息</string>
    <string name="supervisor_name">监事姓名</string>
    <string name="supervisor_name_hint">请输入监事姓名</string>
    <string name="financial_manager_name">财务负责人姓名</string>
    <string name="financial_manager_name_hint">请输入财务负责人姓名</string>

    <string name="shareholder_name">股东姓名</string>
    <string name="shareholder_name_hint">请输入股东姓名</string>
    <string name="ratio_format">%1$s\u25</string>
    <string name="for_tax_registration">用于税务登记办理</string>
    <string name="detailed_address">详细地址</string>
    <string name="detailed_address_hint">请输入详细地址</string>
    <string name="amount_of_fund">资金数额(万元)</string>
    <string name="amount_of_fund2">资金数额(元)</string>
    <string name="amount_of_fund_hint">请输入资金数额(万元)</string>
    <string name="amount_of_fund_hint2">请输入资金数额(元)</string>
    <string name="save">保存</string>
    <string name="commit">提交</string>
    <string name="taxpayer_registration_number">纳税人识别号(社会统一代码)</string>
    <string name="taxpayer_registration_number_hint">请输入纳税人识别号</string>
    <string name="store_name">店铺名称</string>

    <string name="store_name_hint">请输入店铺名称</string>
    <string name="business_license_name">营业执照名称</string>
    <string name="business_license_name_hint">请输入营业执照名称</string>

    <string name="signature_format">营口市国家税务局：\n营口市地方税务局：\n\u3000\u3000兹有我单位：&#160;%1$s&#160;，\n现委托于翔红同志（身份证号码:\n210281 19880301 6829）\n前往贵局办理税务记账事宜，望贵局给予办理。\n\n\n\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000承诺人签字</string>
    <string name="signature_format2">营口市国家税务局：\n营口市地方税务局：\n\u3000\u3000兹有我单位：&#160;%1$s&#160;，\n现委托%2$s同志（身份证号码:\n%3$s）\n前往贵局办理税务记账事宜，望贵局给予办理。\n\n\n\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000\u3000承诺人签字</string>


    <string name="album_need_permission">无法访问系统相册，是否打开应用设置授权？</string>
    <string name="permission_request">权限申请</string>
    <string name="set_permission">去设置</string>
    <string name="capture_error">拍摄失败</string>
    <string name="yes">是</string>
    <string name="no">否</string>


    <string name="pay_bottom_format">去支付&#160;&#165;%1$s</string>

    <string name="new_version_hint_01">检测新版本，授权</string>
    <string name="new_version_hint_02">存储权限</string>
    <string name="new_version_hint_03">后即可安装</string>
    <string name="app_up">软件版本更新</string>
    <string name="downloadStart">开始下载</string>
    <string name="downloading">正在下载</string>
    <string name="downloadError">下载失败</string>
    <string name="downloadOver">下载完成</string>
    <string name="downloadOver_Install">下载完成,点击开始安装</string>
    <string name="apk_downloading">下载中，请稍候…</string>

    <!-- 省市区 -->
    <string name="location_information_format">%1$s%2$s%3$s</string>
    <string name="two_format">%1$s%2$s</string>

    <string name="wechat_auth_user_cancel">微信授权已取消</string>
    <string name="wechat_auth_fail">微信授权失败！</string>

    <string name="use_agreement_content_0">欢迎使用自贸区云账户，请充分阅读并理解</string>
    <string name="use_agreement_content_1">《自贸区云账户用户服务协议》</string>
    <string name="use_agreement_content_2">和</string>
    <string name="use_agreement_content_3">《隐私声明》</string>
    <string name="use_agreement_content_4">\n
1.在仅浏览时，为保障服务所需，我们会申请系统权限收集设备信息、日志信息，用于信息推送。并申请存储权限,用于浏览过程中缓存相关文件。\n
2.为了基于你的所在位置向你推荐内容、展示信息，我们可能会申请位置权限。\n
3.为帮助你在APP中拨打投诉电话或其他咨询热线，我们可能会申请拨打电话权限，该权限不会收集隐私信息，且仅在你使用前述功能时使用。\n
4.GPS、相机、相册等敏感权限均不会默认开启，只有经过明示授权才会为实现功能或服务时使用，你均可以拒绝且不影响你继续使用自贸区云账户APP。</string>
    <string name="agree_and_continue">同意并继续</string>
    <string name="disagree">不同意</string>
    <string name="tips_0">温馨提示</string>


    <string name="ask_image_save_to_device">是否保存该图片到设备？</string>
    <string name="ask_permission_to_open_camera">由于权限限制，无法启用系统摄像，是否打开权限设置？</string>
    <string name="ask_permission_to_read_album">由于权限限制，无法访问系统相册，是否打开权限设置？</string>
    <string name="ask_permission_to_save_image">由于权限限制，无法保存至设备，是否打开权限设置？</string>
    <string name="ask_permission_to_read_storage">由于权限限制，无法访问系统存储，是否打开权限设置？</string>
    <string name="image_save_success">图片保存成功</string>
    <string name="image_position_format" formatted="false">%d&#160;/&#160;%d</string>

    <!-- 校验 -->
    <string name="bank_number_wrong_format">%1$s银行卡号格式错误，请重新输入</string>
    <string name="phone_number_wrong_format">%1$s手机号格式错误，请重新输入</string>
    <string name="id_card_number_wrong_format">%1$s身份证号格式错误，请重新输入</string>
    <string name="id_card_front_empty_format">请上传%1$s身份证正面照片</string>
    <string name="id_card_back_empty_format">请上传%1$s身份证背面照片</string>
    <string name="save_success">保存成功</string>
    <string name="support_format_name">支持扩展名: .png .jpg</string>
    <string name="birthday_format">%1$d-%2$d-%3$d</string>
    <string name="input_format">请输入%1$s</string>
    <string name="employees_number">从业人数</string>

    <string name="message_title">我的消息</string>
    <string name="begin">&#160;起&#160;</string>
    <string name="every_year">&#160;每年&#160;</string>
    <string name="hint_3_to_30_chinese">请输入3~30个中文</string>

    <string name="zero_choice_name">首选名称</string>
    <string name="first_choice_name">备选名称1</string>
    <string name="second_choise_name">备选名称2</string>

    <string name="zero_change_name">变更首选名称</string>
    <string name="first_change_name">变更备选名称1</string>
    <string name="second_change_name">变更备选名称2</string>
    <string name="tax_number">纳税人识别号（社会统一代码）</string>
    <string name="information">办理信息</string>
    <string name="delete">删除</string>
    <string name="prompt">提示</string>
    <string name="delete_draft_confirm">确认删除未提交订单吗？</string>
    <string name="commitment_download_success_hint">承诺书下载成功，请在相册中查看！</string>
    <string name="invest_money_hint_50_10000">资金数额在 50 ～ 10000 万元之间</string>
    <string name="edit">编辑</string>
    <string name="fta_account_wechat">FTAcloud0215</string>
    <string name="fta_account_qq">2159530097</string>
    <string name="fta_account_email">yunzhanghu@126.com</string>
    <string name="coming_soon">产品即将上线，请耐心等待。</string>
    <string name="bookkeeping">个体户代理记账</string>
    <string name="product_p8">个体户银行对公账户</string>
    <string name="product_p9">个体户套餐</string>
    <string name="product_p10">个人独资企业套餐</string>
    <string name="liaoning_market_registration_platform_url">http://wsdj.lngs.gov.cn</string>

</resources>
