<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/company_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/font_white"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/zero_company_name"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/zero_company_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="Snow科技有限公司" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/first_company_name"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/first_company_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="哈哈哈哈或有效公司" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/second_company_name"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/second_company_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="1111111111111111111111111" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/invest_year_num"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/invest_year_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="20" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="资金数额(万元)"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/amount_of_funds_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="66666666" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="经营范围"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/business_scope_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.2"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="食品食品食品食品食品食品食品食品食连市甘井子食品" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bank_card_number"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/bank_card_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="000000" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bank_phone"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/bank_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/address"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/addr_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:textColor="@color/color_first_level"
            android:lineSpacingMultiplier="1.2"
            android:textSize="@dimen/font_size_14"
            tools:text="辽宁省大连市甘井子区连市甘井子连市甘井子连市甘井子连市甘井子连市甘井子连市甘井子连市甘井子" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/split_line_color" />


    <!-- 股东法人相关信息  shareholder -->
    <LinearLayout
        android:id="@+id/shareholder_container_ll"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


       <com.fatcloud.account.view.ShareholderView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>


    </LinearLayout>



</LinearLayout>