<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tax_registration"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/font_white"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/taxpayer_id"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/taxpayer_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="1111111111111111111111111" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/legal_person_name"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/legal_person_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="宫本武藏" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/identity_number"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/id_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="1111111111111111111111111" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bank_card_number"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/bank_card_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="000000" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bank_phone"
            android:textColor="@color/color_third_level"
            android:textSize="@dimen/font_size_14" />


        <TextView
            android:id="@+id/bank_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            tools:text="000000" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/split_line_color" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="3dp"
            android:layout_height="13dp"
            android:layout_centerVertical="true"
            android:src="@drawable/shape_vertical_line_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="营业执照副本"
            android:textColor="@color/color_first_level"
            android:textSize="@dimen/font_size_14"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/split_line_color" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_cv"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/font_white"
        app:cardCornerRadius="6dp"
        app:cardElevation="1dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/business_license_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@tools:sample/backgrounds/scenic" />

    </androidx.cardview.widget.CardView>
</LinearLayout>